negative test has been added for AccountTrigger

--- a/force-app/main/default/classes/AccountTriggerTest.cls
+++ b/force-app/main/default/classes/AccountTriggerTest.cls
@@ -38,4 +38,25 @@ public class AccountTriggerTest {
         System.assert(contacts.size()>0,'There should be at least one contacts whith a new owner');
         
     }
+
+    @isTest
+    static void testAccountChangeButOwnership() {
+
+        User user = [SELECT Id, Email from User where Id != : UserInfo.getUserId() limit 1];
+
+        System.debug('Selected User Id' + user.Id);
+
+        Account account = new Account(Name='AutomatedTest Account try'); 
+
+        insert account;
+
+        account.Name = user.Email;
+
+        update account;
+
+        List<Contact> contacts = [SELECT Id, OwnerId FROM Contact WHERE AccountId = :account.Id and OwnerId =: user.Id];
+
+        System.assert(contacts.size()==0,'There should not be any contacts whith a new owner');
+        
+    }
 }
