3rd excersices unit tests added

--- a/force-app/main/default/classes/AccountTriggerTest.cls
+++ b/force-app/main/default/classes/AccountTriggerTest.cls
@@ -57,4 +57,40 @@ public class AccountTriggerTest {
         System.assert(contacts.size()==0,'There should not be any contacts whith a new owner');
         
     }
+
+    @isTest
+    static void testAccontAgricultureIndustry(){
+
+
+        Account account = new Account(Name='AutomatedTest Account try', Industry='Agriculture'); 
+
+        insert account;
+
+        List<Opportunity> opportunities = [SELECT Name, StageName, CloseDate, Amount from Opportunity WHERE AccountId = :account.Id];
+
+        System.assert(opportunities.size()==1, 'There should be at least one opportunity');
+        System.assertEquals(opportunities[0].StageName, 'Prospecting');
+
+        Date today_90 = Date.today().addDays(90);
+        System.assertEquals(opportunities[0].CloseDate, today_90 );
+
+        System.assertEquals(opportunities[0].Amount, 0 );
+
+        System.assertEquals(opportunities[0].Name, 'Opportunity for Agriculture' );
+        
+
+        
+    }
+    @isTest
+    static void testAccontBankingIndustry(){
+
+
+        Account account = new Account(Name='AutomatedTest Account try', Industry='Banking'); 
+
+        insert account;
+
+        List<Opportunity> opportunities = [SELECT Name, StageName, CloseDate, Amount from Opportunity WHERE AccountId = :account.Id];
+
+        System.assert(opportunities.size()==0, 'There should not be any opportunities');
+    }
 }
